--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
   <parent>
     <groupId>org.apache.maven</groupId>
     <artifactId>maven</artifactId>
-    <version>3.1.2-SNAPSHOT</version>
+    <version>3.0.5</version>
   </parent>
 
   <groupId>info.evanchik.maven</groupId>
